Fix AuthorAvatar, make color-mix good on Safari

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -81,10 +81,9 @@
   --palette-v6--#{$title}--glow-small: 0 0 20px rgba(var(--palette-v6--#{$title}--rgb), 0.4);
   --palette-v6--#{$title}--glow-tiny: 0 0 3px rgba(var(--palette-v6--#{$title}--rgb), 0.7);
 
-  // TODO: color-mix sucks ass in Safari. How can I make them consistent?
-  --palette-v6--#{$title}--mixed: color-mix(in oklch, var(--palette-v6--#{$title}) 100%, var(--t-v6--accent) 1%);
-  // if safari,
-  // --palette-v6--#{$title}--mixed: color-mix(in oklab, var(--palette-v6--#{$title}) 100%, var(--t-v6--accent) 3%);
+  // --palette-v6--#{$title}--mixed: color-mix(in oklch, var(--palette-v6--#{$title}) 100%, var(--t-v6--accent) 1%);
+  // // if safari,
+  --palette-v6--#{$title}--mixed: color-mix(in oklab, var(--palette-v6--#{$title}) 95%, var(--t-v6--accent) 4%);
 }
 
 // Points a named contextual color (accent, complementary, post-type, etc.)
